syntax ="proto3";

option java_multiple_files = false;
option java_package = "com.project";
option java_outer_classname = "SmartAgricultureProto";

service SoilSensorService{
  // Client streaming RPC
  rpc soilSensor(stream SoilSensorRequest) returns (SoilSensorResponse){}
}

service IrrigationSystemService{
  // Bidirectional streaming RPC
  rpc irrigationSystem(stream IrrigationSystemRequest) returns (stream IrrigationSystemResponse){}
}

service MobilePhoneService{
  // Server streaming RPC
  rpc mobilePhoneService1(MobilePhoneRequest) returns (stream MobilePhoneResponse){}
  // Unary RPC
  rpc mobilePhoneService2(MobilePhoneRequest) returns (MobilePhoneResponse){}
}

/* messages between the Soil Sensor and the server */
message SoilSensorRequest{
  string soilInfo = 1; // messages about temperature, nutrition, and pHLevel
}

message SoilSensorResponse{
  string serverMessage = 1; // receive confirmation
}

/* messages between the Irrigation System and the server */
message IrrigationSystemRequest{
  string soilMoisture = 1; // Soil moisture level: 'Very Low Level', 'Low Level', 'Optimal Level', or 'High Level'.
  string flowRate = 2; // Water flow rate: 'Low Flow', or 'High Flow'.
}

message IrrigationSystemResponse{
  string instruction = 1;
}

/* messages between the Mobile Phone and the server */
message MobilePhoneRequest{
  string requestMessage = 1;
}

message MobilePhoneResponse{
  string responseMessage = 1;
}