syntax ="proto3";

option java_multiple_files = false;
option java_package = "com.project";
option java_outer_classname = "SoilSensorProto";

service SoilSensorService{
  // A client-to-server streaming RPC
  // The Server accepts a stream of SoilInfo from the SoilSensor, then return a response
  rpc SendSoilInfo(stream SoilInfo) returns (SoilInfoSummary);

  // health check
  rpc HealthCheck(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message SoilInfo{
  int32 moistureLevel = 1;
  int32 phLevel = 2;
  int32 soilTemperature = 3;
}

message SoilInfoSummary{
  int32 requestCount = 1; // the number of SoilInfo messages that the server received
  double averageMoistureLevel = 2;
  double averagePHLevel = 3;
  double averageSoilTemperature = 4;
}

message HealthCheckRequest {
  string serviceName = 1;
  string serviceVersion = 2;
  int64 timestamp = 3;
}

message HealthCheckResponse {
  int32 status = 1;
  string message = 2;
}